--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -92,7 +92,7 @@
                     <p></p>
                 </form>
                 <hr>
-                <form action="javascript:void(0);">
+                <form id="signup-form" action="javascript:void(0);">
                     <h1>Cadastrar</h1>
                     <label for="signup-email">E-mail</label>
                     <input type="email" id="signup-email" required>
