fixed humanoid character creation and completed character info page

--- a/site/static/css/account.css
+++ b/site/static/css/account.css
@@ -136,3 +136,13 @@
     display: flex;
     flex-direction: column;
 }
+
+.character-container {
+    display: flex;
+}
+
+.character-container > div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
