--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -124,18 +124,26 @@
                     </div>
                 </div>
                 <div class="character-container">
-                    <h1 id="character-name"></h1>
-                    <p>Classe: <span id="character-vocation"></span></p>
-                    <p>Cidade: <span id="character-city"></span></p>
-                    <p>Nível: <span id="character-level"></span></p>
-                    <p>Poder Mágico: <span id="character-magic_level"></span></p>
-                    <p>Punhos: <span id="character-fist"></span></p>
-                    <p>Maça: <span id="character-club"></span></p>
-                    <p>Espada: <span id="character-sword"></span></p>
-                    <p>Machado: <span id="character-axe"></span></p>
-                    <p>Distância: <span id="character-distance"></span></p>
-                    <p>Escudo: <span id="character-shield"></span></p>
-                    <p>Pescaria: <span id="character-fishing"></span></p>
+                    <div>
+                        <h1 id="character-name"></h1>
+                        <p>Raça: <span id="character-race"></span></p>
+                        <p>Classe: <span id="character-vocation"></span></p>
+                        <p>Cidade: <span id="character-city"></span></p>
+                        <p>Guilda: <span id="character-guild"></span></p>
+                        <p>Cargo: <span id="character-guild-position"></span></p>
+                        <p>Nível: <span id="character-level"></span></p>
+                        <p>Poder Mágico: <span id="character-magic_level"></span></p>
+                    </div>
+                    <div>
+                        <h2>Habilidades</h2>
+                        <p>Punhos: <span id="character-fist"></span></p>
+                        <p>Maça: <span id="character-club"></span></p>
+                        <p>Espada: <span id="character-sword"></span></p>
+                        <p>Machado: <span id="character-axe"></span></p>
+                        <p>Distância: <span id="character-distance"></span></p>
+                        <p>Escudo: <span id="character-shield"></span></p>
+                        <p>Pescaria: <span id="character-fishing"></span></p>
+                    </div>
                 </div>
             </div>
             <div id="account-signup-container" class="account-containers">
